--- a/src/app/cocktail-list/cocktail-list.component.html
+++ b/src/app/cocktail-list/cocktail-list.component.html
@@ -1,1 +1,9 @@
-<p>cocktail-list works!</p>
+<h1>Nos cocktails</h1>
+
+<div *ngFor="let cocktail of cocktails">
+    <ul>
+       <li>{{cocktail.name}}</li>
+       <li>{{cocktail.price}}</li>
+       <img [src]="cocktail.picture" alt="picture">
+    </ul>
+</div>
